[tool.poetry]
name = "xai"
version = "0.1.0"
description = ""
authors = ["Toshihiro Yamaguchi <toshihiro.engineer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
jupyterlab = "^4.0.6"
scikit-learn = "^1.3.1"
numpy = ">=1.16.0,<1.24"
pandas = ">1.1,<1.4.0 || >1.4.0,<2.1"
matplotlib = "<3.8"
pydotplus = "^2.0.2"
seaborn = ">=0.10.1,<0.13"
ydata-profiling = "^4.5.1"
ipywidgets = "^8.1.1"
ipympl = "^0.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
